@@ -22,12 +22,44 @@
  *           table specification by introspecting its contents.
  * @property bool $compress
  *           Indicates whether to compress the generated PDF.
+ * @property int $permissions
+ *           User permissions for the document. Defaults to all permissions. 
+ *           May be any combination of the following flags: 
+ *           ezcDocumentPdfOptions::EDIT Edit annotations and form fields
+ *           ezcDocumentPdfOptions::PRINTABLE User may print the document
+ *           ezcDocumentPdfOptions::COPY User may copy contents
+ *           ezcDocumentPdfOptions::MODIFY User may edit the contents
+ * @property string $ownerPassword
+ *           Password, which will be required to chnage the permissions of the 
+ *           PDF document.
+ * @property string $userPassword
+ *           Password, which will be required to access the PDF document.
  *
  * @package Document
  * @version //autogen//
  */
 class ezcDocumentPdfOptions extends ezcDocumentOptions
 {
+    /**
+     * User may edit annotations and form field in the PDF
+     */
+    const EDIT = 1;
+
+    /**
+     * User may print the PDF document
+     */
+    const PRINTABLE = 2;
+
+    /**
+     * User may copy contents from the PDF document
+     */
+    const COPY = 4;
+
+    /**
+     * User may modify the contents of the PDF document
+     */
+    const MODIFY = 8;
+
     /**
      * Constructs an object with the specified values.
      *
@@ -43,9 +75,11 @@ class ezcDocumentPdfOptions extends ezcDocumentOptions
         $this->tokenizer                  = new ezcDocumentPdfDefaultTokenizer();
         $this->tableColumnWidthCalculator = new ezcDocumentPdfDefaultTableColumnWidthCalculator();
         $this->compress                   = false;
+        $this->permissions                = -1;
+        $this->ownerPassword              = null;
+        $this->userPassword               = null;
 
-        // @todo: There might be a better default:
-        $this->driver     = new ezcDocumentPdfHaruDriver();
+        $this->properties['driver']       = null;
 
         parent::__construct( $options );
     }
@@ -108,6 +142,32 @@ class ezcDocumentPdfOptions extends ezcDocumentOptions
                 }
 
                 $this->properties[$name] = $value;
+                break;
+
+            case 'ownerPassword':
+            case 'userPassword':
+                if ( !is_string( $value ) && !is_null( $value ) )
+                {
+                    throw new ezcBaseValueException( $name, $value, 'string OR null' );
+                }
+
+                if ( ( $name === 'userPassword' ) &&
+                     ( $value !== null ) &&
+                     ( $this->properties['ownerPassword'] === null ) )
+                {
+                    throw new ezcBaseValueException( $name, $value, 'ownerPassword must be specified, before a userPassword can be set.' );
+                }
+
+                $this->properties[$name] = $value;
+                break;
+
+            case 'permissions':
+                if ( !is_int( $value ) )
+                {
+                    throw new ezcBaseValueException( $name, $value, 'Vitwise combination of ezcDocumentPdfOptions::EDIT, ezcDocumentPdfOptions::PRINTABLE, ezcDocumentPdfOptions::MODIFY, ezcDocumentPdfOptions::COPY' );
+                }
+
+                $this->properties[$name] = (int) $value;
                 break;
 
             default:
